Closed
Bug 104421
Opened 24 years ago
Closed 24 years ago
crash entering msn.com - Trunk [@ nsVoidArray::IndexOf][@ IndexOf]
Categories
(Core :: Graphics: ImageLib, defect)
Core
Graphics: ImageLib
Tracking
()
VERIFIED
FIXED
mozilla0.9.6
People
(Reporter: tracy, Assigned: pavlov)
References
()
Details
(Keywords: crash, smoketest, topcrash)
Crash Data
Attachments
(1 file)
|
588 bytes,
patch
|
bryner
:
review+
|
Details | Diff | Splinter Review |
sorry about putting this under browser general Asa. You told me this category
is the worst place to put blockers, but I don't know where it belongs.
-go to www.msn.com
CRASH!
here are some links to talkback incidents:
linux crash - http://cyclone/reports/SingleIncidentInfo.cfm?dynamicBBID=36611169
win98 crash - http://cyclone/reports/SingleIncidentInfo.cfm?dynamicBBID=36611153
mac incident was empty :-/
| Reporter | ||
Comment 1•24 years ago
|
||
this was seen on trunk only builds: (0.9.4 branch was fine)
windows 2001-10-12-06-trunk
linux 2001-10-12-08-trunk
mac 2001-10-12-04-trunk
Comment 2•24 years ago
|
||
Is this related to bug 104405?
Generated TB36614797K, Linux Build-ID 2001101208
| Reporter | ||
Comment 3•24 years ago
|
||
I tried those sites mentioned in bug 104405 and didn't crash
The top of twalker's Windows stack:
nsVoidArray::IndexOf [d:\builds\seamonkey\mozilla\xpcom\ds\nsVoidArray.cpp, line
375]
nsVoidArray::RemoveElement
[d:\builds\seamonkey\mozilla\xpcom\ds\nsVoidArray.cpp, line 588]
imgRequest::RemoveProxy
[d:\builds\seamonkey\mozilla\modules\libpr0n\src\imgRequest.cpp, line 171]
imgRequestProxy::~imgRequestProxy
[d:\builds\seamonkey\mozilla\modules\libpr0n\src\imgRequestProxy.cpp, line 77]
imgRequestProxy::`scalar deleting destructor'
imgRequestProxy::Release
[d:\builds\seamonkey\mozilla\modules\libpr0n\src\imgRequestProxy.cpp, line 39]
nsCOMPtr_base::assign_with_AddRef
[d:\builds\seamonkey\mozilla\xpcom\glue\nsCOMPtr.cpp, line 74]
nsImageFrame::Init
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsImageFrame.cpp, line 291]
nsCSSFrameConstructor::InitAndRestoreFrame
[d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp,
line 6491]
nsCSSFrameConstructor::ConstructFrameByTag
[d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp,
line 4730]
nsCSSFrameConstructor::ConstructFrameInternal
[d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp,
line 7030]
This looks a bit like bug 103477.
*** Bug 104405 has been marked as a duplicate of this bug. ***
Comment 7•24 years ago
|
||
Is this the same thing that is crashing at http://cnn.com/ with build 2001101203 ?
Comment 8•24 years ago
|
||
shotgun cc:
*** Bug 104425 has been marked as a duplicate of this bug. ***
*** Bug 104430 has been marked as a duplicate of this bug. ***
Comment 11•24 years ago
|
||
looks like bug 103477(smoketest, "fixed" 2001-10-07 10:51):
This is the same crash with the same Stack and the same page.
| Assignee | ||
Comment 12•24 years ago
|
||
... looking...
| Assignee | ||
Comment 13•24 years ago
|
||
| Assignee | ||
Updated•24 years ago
|
Comment 14•24 years ago
|
||
Comment on attachment 53303 [details] [diff] [review]
1 line fix
r=bryner
Attachment #53303 -
Flags: review+
| Assignee | ||
Comment 15•24 years ago
|
||
fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 16•24 years ago
|
||
*** Bug 104450 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 17•24 years ago
|
||
verified fixed with linux respin 2001-10-12-12-trunk
Status: RESOLVED → VERIFIED
Comment 18•24 years ago
|
||
*** Bug 104453 has been marked as a duplicate of this bug. ***
Comment 19•24 years ago
|
||
*** Bug 104569 has been marked as a duplicate of this bug. ***
Comment 20•24 years ago
|
||
*** Bug 104533 has been marked as a duplicate of this bug. ***
Comment 21•24 years ago
|
||
*** Bug 104569 has been marked as a duplicate of this bug. ***
Comment 22•24 years ago
|
||
I still see this bug on milestone 0.9.5 under linux
TB36661513W
TB36661384H
Did we ship 0.9.5 with a blocker bug? If so, shouldn't we release 0.9.5a with a fix?
Comment 23•24 years ago
|
||
Diego : Does it crash if you open chatzilla ?
If not then you are seeing not this crash
Comment 24•24 years ago
|
||
Matti, I see it when opening chatzilla and when going to cnn.com. Both 100%
reproducible.
Mozillazine links to an updated daily build for linux with the fix included, I
just downloaded and tried it, no problem with that one.
Comment 25•24 years ago
|
||
*** Bug 104591 has been marked as a duplicate of this bug. ***
Comment 26•24 years ago
|
||
Sorry for spamming you all, this bug is definitely not in 0.9.5, I just confused
two tar.gz builds... May this bug rest in peace now.
Comment 27•24 years ago
|
||
*** Bug 104884 has been marked as a duplicate of this bug. ***
Comment 28•24 years ago
|
||
*** Bug 104587 has been marked as a duplicate of this bug. ***
Comment 29•24 years ago
|
||
*** Bug 104767 has been marked as a duplicate of this bug. ***
Comment 30•24 years ago
|
||
Adding crash, topcrash keywords and Trunk [@ nsVoidArray::IndexOf][@ IndexOf] to
summary for future reference.
Comment 31•24 years ago
|
||
*** Bug 115830 has been marked as a duplicate of this bug. ***
Updated•14 years ago
|
Crash Signature: [@ nsVoidArray::IndexOf]
[@ IndexOf]
You need to log in
before you can comment on or make changes to this bug.
Description
•