fixing smoketest blocker bug 104421.  r=bryner a=endico